--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ./js/cashier.js -f node_modules/eslint-html-reporter/reporter.js -o report.html",
+    "lint": "eslint ./js -f node_modules/eslint-html-reporter/reporter.js -o report.html",
     "githooks": "git config core.hooksPath ./git-hooks"
   },
   "repository": {
